// Copyright (c) 2019 Minoru Osuka
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 		http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
import "protobuf/raft/raft.proto";

package management;

option go_package = "github.com/mosuka/blast/protobuf/management";

service Management {
    rpc Join (raft.Node) returns (google.protobuf.Empty) {}
    rpc Leave (raft.Node) returns (google.protobuf.Empty) {}
    rpc GetNode (google.protobuf.Empty) returns (raft.Node) {}
    rpc GetCluster (google.protobuf.Empty) returns (raft.Cluster) {}
    rpc Snapshot (google.protobuf.Empty) returns (google.protobuf.Empty) {}

    rpc Get (KeyValuePair) returns (KeyValuePair) {}
    rpc Set (KeyValuePair) returns (google.protobuf.Empty) {}
    rpc Delete (KeyValuePair) returns (google.protobuf.Empty) {}
}

message KeyValuePair {
    string key = 1;
    google.protobuf.Any value = 2;
}

message ManagementCommand {
    enum Type {
        UNKNOWN_COMMAND = 0;
        SET_METADATA = 1;
        DELETE_METADATA = 2;
        PUT_KEY_VALUE_PAIR = 3;
        DELETE_KEY_VALUE_PAIR = 4;
    }
    Type type = 1;
    google.protobuf.Any data = 2;
}

